--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - python >=3.7
   - pytorch ==1.6
+  - torchvision ==0.7.0
   - cudatoolkit =10.1
   - plotly >=4.8
   - plotly-orca >=1.3
