--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,7 @@ jobs:
         shell: bash -l {0}
         run: |
           ./ci/unittest.sh
+      - name: Integration Tests
+        shell: bash -l {0}
+        run: |
+          ./ci/integration_test.sh
