--- a/config/test.yml
+++ b/config/test.yml
@@ -2,6 +2,8 @@ dataset:
   source: cifar_fs
 optimizer:
   train:
+    learning_rate: 0.0005
     type: adam
   support:
+    learning_rate: 0.0005
     type: adam
