--- a/config/test.yml
+++ b/config/test.yml
@@ -1,2 +1,9 @@
 dataset:
   source: cifar_fs
+optimizer:
+  train:
+    learning_rate: 0.0005
+    type: adam
+  support:
+    learning_rate: 0.0005
+    type: adam
