--- a/config/cifar_fs.yml
+++ b/config/cifar_fs.yml
@@ -17,4 +17,8 @@ evaluation:
   num_iterations: 250
 task:
   byol:
-    scale: [0.4, 1.0]
+    scale: [0.2, 1.0]
+transform:
+  image_size: [96, 96]
+  crop_size: [96, 96]
+  crop_padding: 4
