--- a/config/cifar_fs.yml
+++ b/config/cifar_fs.yml
@@ -5,7 +5,7 @@ dataloader:
 scheduler:
   train:
     multistep:
-      milestones: [45, 60, 75]
+      milestones: [60, 80]
 trainer:
   epochs: 90
   support_training:
@@ -17,7 +17,7 @@ evaluation:
   num_iterations: 250
 task:
   byol:
-    scale: [0.2, 1.0]
+    scale: [0.35, 1.0]
 transform:
   image_size: [96, 96]
   crop_size: [96, 96]
