Compute transforms is False by default for rotation

--- a/config/cifar_fs.yml
+++ b/config/cifar_fs.yml
@@ -19,7 +19,7 @@ task:
   byol:
     scale: [0.2, 1.0]
   rotation:
-    compute_tfm: True
+    compute_tfm: False
 transform:
   image_size: [96, 96]
   crop_size: [96, 96]
