--- a/config/efficient_supervised_super_byol.yml
+++ b/config/efficient_supervised_super_byol.yml
@@ -9,7 +9,7 @@ task:
     key_transforms: ["key-transform-1", "key-transform-2"]
     key_forwards: ["key-forward-1", "key-forward-2"]
   supervised:
-    key_transforms: ["key-transform-1"]
-    key_forwards: ["key-forward-1"]
+    key_transforms: ["key-transform-1", "key-transform-2"]
+    key_forwards: ["key-forward-1", "key-forward-2"]
 transform:
   difficulty: "hard"
